C-Abi-Bridge-Aot/Tests/CAbiBridge.Aot.Cpp.Tests/bridge.h


CABI_IMPORT double next_crypto_double_min_max_aot(double min, double max, cerror_t* err);

CABI_IMPORT cerror_t rng_crypto_double_aot(int size, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_double_max_aot(int size, double max, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_double_min_max_aot(int size, double min, double max, void** out_ptr);


// Float
CABI_IMPORT float next_crypto_single_aot(cerror_t* err);

CABI_IMPORT float next_crypto_single_max_aot(float max, cerror_t* err);

CABI_IMPORT float next_crypto_single_min_max_aot(float min, float max, cerror_t* err);

CABI_IMPORT cerror_t rng_crypto_single_aot(int size, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_single_max_aot(int size, float max, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_single_min_max_aot(int size, float min, float max, void** out_ptr);


// ---------------------------------------------------------
// PQC Ml-Kem
// ---------------------------------------------------------

CABI_IMPORT cerror_t create_mlkem_key_pair_aot(
  uint8_t** priv_key_ptr, int* priv_key_length,
  uint8_t** pub_key_ptr, int* pub_key_length,
  uint8_t** guid_id_ptr, int* guid_id_length,
  uint8_t* mlkem_param, uint8_t* crypto_algo);


CABI_IMPORT cerror_t create_mlkem_key_pair_param_aot(
  uint8_t mlkem_param, uint8_t crypto_algo,
  uint8_t** priv_key_ptr, int* priv_key_length,
  uint8_t** pub_key_ptr, int* pub_key_length,
  uint8_t** guid_id_ptr, int* guid_id_length);


CABI_IMPORT cerror_t save_pqc_mlkem_key_pair_aot(
  const uint8_t* file, int file_len,
  const uint8_t* priv_key, int priv_key_len,
  const uint8_t* pub_key, int pub_key_len,
  const uint8_t* guid, int guid_len,
  uint8_t mlkem_param, uint8_t crypto_algo,
  int with_priv_key);


CABI_IMPORT cerror_t load_pqc_mlkem_key_pair_aot(
  const uint8_t* file, int file_len,
  uint8_t** priv_key_ptr, int* priv_key_length,
  uint8_t** pub_key_ptr, int* pub_key_length,
  uint8_t** guid_id_ptr, int* guid_id_length,
  uint8_t* mlkem_param, uint8_t* crypto_algo);


CABI_IMPORT cerror_t to_pqc_mlkem_capsulation_from_pub_key_aot(
  const uint8_t* pub_key, int pub_key_len,
  uint8_t mlkem_param,
  uint8_t** shared_key_ptr, int* shared_key_len,
  uint8_t** caps_ptr, int* caps_len);


CABI_IMPORT cerror_t to_pqc_mlkem_shared_key_from_private_key_aot(
  const uint8_t* priv_key, int priv_key_len,
  const uint8_t* caps, int caps_len,
  uint8_t mlkem_param,
  uint8_t** shared_key_ptr, int* shared_key_len);


CABI_IMPORT cerror_t pqc_mlkem_encryption_aot(
  const uint8_t* msg, int msg_len,
  const uint8_t* priv_key, int priv_key_len,
  const uint8_t* caps, int caps_len,
  const uint8_t* associated, int associated_len,
  uint8_t mlkem_param, uint8_t crypto_algo,
  uint8_t** cipher_ptr, int* cipher_len);


CABI_IMPORT cerror_t pqc_mlkem_decryption_aot(
  const uint8_t* cipher, int cipher_len,
  const uint8_t* shared_key, int shared_key_len,
  const uint8_t* associated, int associated_len,
  uint8_t mlkem_param, uint8_t crypto_algo,
  uint8_t** plain_ptr, int* plain_len);


CABI_IMPORT cerror_t pqc_mlkem_encryption_file_aot(
  const uint8_t* src_file_ptr, int src_file_length,
  const uint8_t* dest_file_ptr, int dest_file_length,
  const uint8_t* private_key_ptr, int private_key_length,
  const uint8_t* capsulation_ptr, int capsulation_length,
  const uint8_t* associated_ptr, int associated_length,
  uint8_t mlkem_param, uint8_t crypto_algo);


CABI_IMPORT cerror_t pqc_mlkem_decryption_file_aot(
  const uint8_t* src_file_ptr, int src_file_length,
  const uint8_t* dest_file_ptr, int dest_file_length,
  const uint8_t* shared_key_ptr, int shared_key_length,
  const uint8_t* associated_ptr, int associated_length);



// ---------------------------------------------------------
// PQC ML-DSA KeyPair (Bytes)
// ---------------------------------------------------------

CABI_IMPORT cerror_t create_mldsa_key_pair_aot(
  uint8_t** priv_key_ptr, int* priv_key_length,
  uint8_t** pub_key_ptr, int* pub_key_length,
  uint8_t** guid_id_ptr, int* guid_id_length,
  uint8_t* mldsa_param);


CABI_IMPORT cerror_t create_mldsa_key_pair_param_aot(
  uint8_t   mldsa_param,
  uint8_t** priv_key_ptr, int* priv_key_length,
  uint8_t** pub_key_ptr, int* pub_key_length,
  uint8_t** guid_id_ptr, int* guid_id_length);


CABI_IMPORT cerror_t save_pqc_mldsa_key_pair_aot(
  const uint8_t* src, int src_length,
  const uint8_t* priv_key, int priv_key_length,
  const uint8_t* pub_key, int pub_key_length,
  const uint8_t* guid_id, int guid_id_length,
  uint8_t        mldsa_param,
  uint8_t        save_private_key);


CABI_IMPORT cerror_t load_pqc_mldsa_key_pair_aot(
  const uint8_t* src, int src_length,
  uint8_t** priv_key_ptr, int* priv_key_length,
  uint8_t** pub_key_ptr, int* pub_key_length,
  uint8_t** guid_id_ptr, int* guid_id_length,
  uint8_t* mldsa_param);


// ---------------------------------------------------------
// PQC ML-DSA Sign / Verify (Bytes)
// ---------------------------------------------------------

CABI_IMPORT cerror_t pqc_mldsa_sign_aot(
  const uint8_t* message_ptr, int message_length,
  const uint8_t* priv_key_ptr, int priv_key_length,
  uint8_t mldsa_param,
  uint8_t** sign_ptr, int* sign_length);


CABI_IMPORT uint8_t pqc_mldsa_verify_aot(
  const uint8_t* message_ptr, int message_length,
  const uint8_t* public_key_ptr, int public_key_length,
  const uint8_t* signature_ptr, int signature_length,
  cerror_t* cerror);


// ---------------------------------------------------------
// PQC ML-DSA Sign / Verify (Files)
// ---------------------------------------------------------

CABI_IMPORT cerror_t pqc_mldsa_sign_file_aot(
  const uint8_t* src_file_ptr, int src_file_length,
  const uint8_t* private_key_ptr, int private_key_length,
  uint8_t mldsa_param,
  uint8_t** sign_ptr, int* sign_length);


CABI_IMPORT uint8_t pqc_mldsa_verify_file_aot(
  const uint8_t* src_file_ptr, int src_file_length,
  const uint8_t* public_key_ptr, int public_key_length,
  const uint8_t* signature_ptr, int signature_length,
  cerror_t* cerror);


// ---------------------------------------------------------
// PQC ML-DSA Multi-Sign
// ---------------------------------------------------------

CABI_IMPORT cerror_t pqc_mldsa_multi_sign_aot(
  const uint8_t* message_ptr, int message_length,

  uint8_t** guid_ptr, int* guid_length, int guid_count,
  uint8_t** sign_ptr, int* sign_length, int sign_count,
  uint8_t** public_key_ptr, int* public_key_length, int public_key_count,
  uint8_t** signer_name_ptr, int* signer_name_length, int signer_name_count,
  uint8_t** project_name_ptr, int* project_name_length, int project_name_count,

  const uint8_t* sign_algo_ptr, int sign_algo_count,
  const uint8_t* mldsa_param_ptr, int mldsa_param_count,

  uint8_t** multi_sign_ptr, int* multi_sign_length,
  uint8_t** multi_private_key_ptr, int* multi_private_key_length,
  uint8_t** multi_public_key_ptr, int* multi_public_key_length);