C-Abi-Bridge-Aot/Tests/CAbiBridgeAot.Tests/Native.cs


  [LibraryImport(DllName, EntryPoint = "next_crypto_double_min_max_aot")]
  internal static partial double NextCryptoDoubleMinMaxAot(double min, double max, out CError err);

  [LibraryImport(DllName, EntryPoint = "rng_crypto_double_aot")]
  internal static partial CError RngCryptoDoubleAot(int size, out IntPtr out_ptr);

  [LibraryImport(DllName, EntryPoint = "rng_crypto_double_max_aot")]
  internal static partial CError RngCryptoDoubleMaxAot(int size, double max, out IntPtr out_ptr);

  [LibraryImport(DllName, EntryPoint = "rng_crypto_double_min_max_aot")]
  internal static partial CError RngCryptoDoubleMinMaxAot(int size, double min, double max, out IntPtr out_ptr);

  #endregion Doubles

  # region Singles

  [LibraryImport(DllName, EntryPoint = "next_crypto_single_aot")]
  internal static partial float NextCryptoSingleAot(out CError err);

  [LibraryImport(DllName, EntryPoint = "next_crypto_single_max_aot")]
  internal static partial float NextCryptoSingleMaxAot(float max, out CError err);

  [LibraryImport(DllName, EntryPoint = "next_crypto_single_min_max_aot")]
  internal static partial float NextCryptoSingleMinMaxAot(float min, float max, out CError err);

  [LibraryImport(DllName, EntryPoint = "rng_crypto_single_aot")]
  internal static partial CError RngCryptoSingleAot(int size, out IntPtr out_ptr);

  [LibraryImport(DllName, EntryPoint = "rng_crypto_single_max_aot")]
  internal static partial CError RngCryptoSingleMaxAot(int size, float max, out IntPtr out_ptr);

  [LibraryImport(DllName, EntryPoint = "rng_crypto_single_min_max_aot")]
  internal static partial CError RngCryptoSingleMinMaxAot(int size, float min, float max, out IntPtr out_ptr);

  #endregion Singles

  #region Decimals

  [LibraryImport(DllName, EntryPoint = "next_crypto_decimal_aot")]
  internal static partial decimal NextCryptoDecimalAot(out CError err);

  [LibraryImport(DllName, EntryPoint = "next_crypto_decimal_max_aot")]
  internal static partial decimal NextCryptoDecimalMaxAot(decimal max, out CError err);

  [LibraryImport(DllName, EntryPoint = "next_crypto_decimal_min_max_aot")]
  internal static partial decimal NextCryptoDecimalMinMaxAot(decimal min, decimal max, out CError err);

  [LibraryImport(DllName, EntryPoint = "rng_crypto_decimal_aot")]
  internal static partial CError RngCryptoDecimalAot(int size, out IntPtr out_ptr);

  [LibraryImport(DllName, EntryPoint = "rng_crypto_decimal_max_aot")]
  internal static partial CError RngCryptoDecimalMaxAot(int size, decimal max, out IntPtr out_ptr);

  [LibraryImport(DllName, EntryPoint = "rng_crypto_decimal_min_max_aot")]
  internal static partial CError RngCryptoDecimalMinMaxAot(int size, decimal min, decimal max, out IntPtr out_ptr);

  #endregion Decimals

  #endregion Crypto Random

  #region Crypto PQC

  #region Crypto PQC Cryption

  #region Crypto PQC Cryption ML-KEM

  #region Crypto PQC Cryption ML-KEM Bytes

  [LibraryImport(DllName, EntryPoint = "create_mlkem_key_pair_aot")]
  internal static partial CError CreateMlKemKeyPairAot(
    out IntPtr priv_key_ptr, out int priv_key_length,
    out IntPtr pub_key_ptr, out int pub_key_length,
    out IntPtr guid_id_ptr, out int guid_id_length,
    out byte mlkem_param, out byte crypto_algo);

  [LibraryImport(DllName, EntryPoint = "create_mlkem_key_pair_param_aot")]
  internal static partial CError CreateMlKemKeyPairParamAot(
    byte mlkem_param, byte crypto_algo,
    out IntPtr priv_key_ptr, out int priv_key_length,
    out IntPtr pub_key_ptr, out int pub_key_length,
    out IntPtr guid_id_ptr, out int guid_id_length);

  [LibraryImport(DllName, EntryPoint = "save_pqc_mlkem_key_pair_aot")]
  internal static partial CError SavePqcMlKemKeyPairAot(
    ReadOnlySpan<byte> src, int src_length,
    ReadOnlySpan<byte> priv_key, int priv_key_length,
    ReadOnlySpan<byte> pub_key, int pub_key_length,
    ReadOnlySpan<byte> guid_id, int guid_id_length,
    byte mlkem_param, byte crypto_algo,
    [MarshalAs(UnmanagedType.U1)] bool save_private_key);

  [LibraryImport(DllName, EntryPoint = "load_pqc_mlkem_key_pair_aot")]
  internal static partial CError LoadPqcMlKemKeyPairAot(
    ReadOnlySpan<byte> src, int src_length,
    out IntPtr priv_key_ptr, out int priv_key_length,
    out IntPtr pub_key_ptr, out int pub_key_length,
    out IntPtr guid_id_ptr, out int guid_id_length,
    out byte mlkem_param, out byte crypto_algo);

  [LibraryImport(DllName, EntryPoint = "to_pqc_mlkem_capsulation_from_pub_key_aot")]
  internal static partial CError ToPqcMlKemCapsulationFromPubKeyAot(
    ReadOnlySpan<byte> alice_public_key, int alice_public_key_length,
    byte mlkem_param,
    out IntPtr shared_key_ptr, out int shared_key_length,
    out IntPtr capsulation_ptr, out int capsulation_length);

  [LibraryImport(DllName, EntryPoint = "to_pqc_mlkem_shared_key_from_private_key_aot")]
  internal static partial CError ToPqcMlKemSharedKeyFromPrivateKeyAot(
    ReadOnlySpan<byte> alice_private_key, int alice_private_key_length,
    ReadOnlySpan<byte> capsulation, int capsulation_length,
    byte mlkem_param, out IntPtr shared, out int shared_length);

  [LibraryImport(DllName, EntryPoint = "pqc_mlkem_encryption_aot")]
  internal static partial CError PqcMlKemEncryptionAot(
    ReadOnlySpan<byte> message, int message_length,
    ReadOnlySpan<byte> private_key, int private_key_length,
    ReadOnlySpan<byte> capsulation, int capsulation_length,
    ReadOnlySpan<byte> associated, int associated_length,
    byte mlkem_param, byte crypto_algo,
    out IntPtr cipher, out int cipher_length);

  [LibraryImport(DllName, EntryPoint = "pqc_mlkem_decryption_aot")]
  internal static partial CError PqcMlKemDecryptionAot(
    ReadOnlySpan<byte> cipher, int cipher_length,
    ReadOnlySpan<byte> shared_key, int shared_key_length,
    ReadOnlySpan<byte> associated, int associated_length,
    byte mlkem_param, byte crypto_algo,
    out IntPtr decipher_ptr, out int decipher_length);

  #endregion Crypto PQC Cryption ML-KEM Bytes

  #region Crypto PQC Cryption ML-KEM Files

  [LibraryImport(DllName, EntryPoint = "pqc_mlkem_encryption_file_aot")]
  internal static partial CError PqcMlKemEncryptionFileAot(
    ReadOnlySpan<byte> src_file, int src_file_length,
    ReadOnlySpan<byte> dest_file, int dest_file_length,
    ReadOnlySpan<byte> private_key, int private_key_length,
    ReadOnlySpan<byte> capsulation, int capsulation_length,
    ReadOnlySpan<byte> associated, int associated_length,
    byte mlkem_param, byte crypto_algo);

  [LibraryImport(DllName, EntryPoint = "pqc_mlkem_decryption_file_aot")]
  internal static partial CError PqcMlKemDecryptionFileAot(
    ReadOnlySpan<byte> src_file, int src_file_length,
    ReadOnlySpan<byte> dest_file, int dest_file_length,
    ReadOnlySpan<byte> shared_key, int shared_key_length,
    ReadOnlySpan<byte> associated, int associated_length);


  //[LibraryImport(DllName, EntryPoint = "pqc_mlkem_encryption_kpi_file_aot")]
  //internal static partial CError PqcMlKemEncryptionKpiFileAot(
  //  ReadOnlySpan<byte> src_file, int src_file_length,
  //  ReadOnlySpan<byte> dest_file, int dest_file_length,
  //  ReadOnlySpan<byte> key_pair_file, int key_pair_file_length,
  //  ReadOnlySpan<byte> associated, int associated_length);

  //[LibraryImport(DllName, EntryPoint = "pqc_mlkem_decryption_kpi_file_aot")]
  //internal static partial CError PqcMlKemDecryptionKpiFileAot(
  //  ReadOnlySpan<byte> src_file, int src_file_length,
  //  ReadOnlySpan<byte> dest_file, int dest_file_length,
  //  ReadOnlySpan<byte> key_pair_file, int key_pair_file_length,
  //  ReadOnlySpan<byte> associated, int associated_length);

  #endregion Crypto PQC Cryption ML-KEM Files

  #endregion Crypto PQC Cryption ML-KEM

  #endregion Crypto PQC Cryption

  #region Crypto PQC Signatur

  #region Crypto PQC Signatur Stateless

  #region Crypto PQC Signatur ML-DSA

  #region Crypto PQC Signatur ML-DSA Bytes

  [LibraryImport(DllName, EntryPoint = "create_mldsa_key_pair_aot")]
  internal static partial CError CreateMlDsaKeyPairAot(
   out IntPtr priv_key_ptr, out int priv_key_length,
   out IntPtr pub_key_ptr, out int pub_key_length,
   out IntPtr guid_id_ptr, out int guid_id_length,
   out byte mldsa_param);

  [LibraryImport(DllName, EntryPoint = "create_mldsa_key_pair_param_aot")]
  internal static partial CError CreateMlDsaKeyPairParamAot(
    byte mldsa_param,
    out IntPtr priv_key_ptr, out int priv_key_length,
    out IntPtr pub_key_ptr, out int pub_key_length,
    out IntPtr guid_id_ptr, out int guid_id_length);

  [LibraryImport(DllName, EntryPoint = "save_pqc_mldsa_key_pair_aot")]
  internal static partial CError SavePqcMlDsaKeyPairAot(
    ReadOnlySpan<byte> src, int src_length,
    ReadOnlySpan<byte> priv_key, int priv_key_length,
    ReadOnlySpan<byte> pub_key, int pub_key_length,
    ReadOnlySpan<byte> guid_id, int guid_id_length,
    byte mldsa_param,
    [MarshalAs(UnmanagedType.U1)] bool save_private_key);

  [LibraryImport(DllName, EntryPoint = "load_pqc_mldsa_key_pair_aot")]
  internal static partial CError LoadPqcMlDsaKeyPairAot(
    ReadOnlySpan<byte> src, int src_length,
    out IntPtr priv_key_ptr, out int priv_key_length,
    out IntPtr pub_key_ptr, out int pub_key_length,
    out IntPtr guid_id_ptr, out int guid_id_length,
    out byte mldsa_param);

  [LibraryImport(DllName, EntryPoint = "pqc_mldsa_sign_aot")]
  internal static partial CError PqcMlDsaSignAot(
    ReadOnlySpan<byte> message_ptr, int message_length,
    ReadOnlySpan<byte> priv_key_ptr, int priv_key_length,
    byte mldsa_param, out IntPtr sign_ptr, out int sign_length);

  [LibraryImport(DllName, EntryPoint = "pqc_mldsa_verify_aot")]
  [return: MarshalAs(UnmanagedType.I1)]
  internal static partial bool PqcMlDsaVerifyAot(
    ReadOnlySpan<byte> message_ptr, int message_length,
    ReadOnlySpan<byte> public_key_ptr, int public_key_length,
    ReadOnlySpan<byte> signature_ptr, int signature_length,
    out CError cerror);

  #endregion Crypto PQC Signatur ML-DSA Bytes

  #region Crypto PQC Signatur ML-DSA Files

  [LibraryImport(DllName, EntryPoint = "pqc_mldsa_sign_file_aot")]
  internal static partial CError PqcMlDsaSignFileAot(
    ReadOnlySpan<byte> src_file_ptr, int src_file_length,
    ReadOnlySpan<byte> private_key_ptr, int private_key_length,
    byte mldsa_param, out IntPtr sign_ptr, out int sign_length);

  [LibraryImport(DllName, EntryPoint = "pqc_mldsa_verify_file_aot")]
  [return: MarshalAs(UnmanagedType.U1)]
  internal static partial bool PqcMlDsaVerifyFileAot(
    ReadOnlySpan<byte> src_file_ptr, int src_file_length,
    ReadOnlySpan<byte> public_key_ptr, int public_key_length,
    ReadOnlySpan<byte> signature_ptr, int signature_length,
    out CError cerror);

  #endregion Crypto PQC Signatur ML-DSA Files

  #region Crypto PQC Multi Signatur ML-DSA

  [LibraryImport(DllName, EntryPoint = "pqc_mldsa_multi_sign_aot")]
  internal static unsafe partial CError PqcMlDsaMultiSignAot(
      byte* message_ptr, int message_length,

      byte** guid_ptr, int* guid_length, int guid_count,
      byte** sign_ptr, int* sign_length, int sign_count,
      byte** public_key_ptr, int* public_key_length, int public_key_count,
      byte** signer_name_ptr, int* signer_name_length, int signer_name_count,
      byte** project_name_ptr, int* project_name_length, int project_name_count,

      byte* sign_algo_ptr, int sign_algo_count,
      byte* mldsa_param_ptr, int mldsa_param_count,

      out IntPtr multi_sign_ptr, out int multi_sign_length,
      out IntPtr multi_private_key_ptr, out int multi_private_key_length,
      out IntPtr multi_public_key_ptr, out int multi_public_key_length);


